@@ -4,12 +4,18 @@ Invalid read of size 1
  Address 0x........ is 1,000 bytes inside a block of size 1,000,015 free'd
    at 0x........: free (vg_replace_malloc.c:...)
    by 0x........: main (big_blocks_freed_list.c:21)
+ Block was alloc'd at
+   at 0x........: malloc (vg_replace_malloc.c:...)
+   by 0x........: main (big_blocks_freed_list.c:19)
 
 Invalid read of size 1
    at 0x........: main (big_blocks_freed_list.c:23)
  Address 0x........ is 1,000 bytes inside a block of size 900,000 free'd
    at 0x........: free (vg_replace_malloc.c:...)
    by 0x........: main (big_blocks_freed_list.c:20)
+ Block was alloc'd at
+   at 0x........: malloc (vg_replace_malloc.c:...)
+   by 0x........: main (big_blocks_freed_list.c:18)
 
 Invalid read of size 1
    at 0x........: main (big_blocks_freed_list.c:33)
@@ -20,24 +26,36 @@ Invalid read of size 1
  Address 0x........ is 2,000 bytes inside a block of size 900,000 free'd
    at 0x........: free (vg_replace_malloc.c:...)
    by 0x........: main (big_blocks_freed_list.c:20)
+ Block was alloc'd at
+   at 0x........: malloc (vg_replace_malloc.c:...)
+   by 0x........: main (big_blocks_freed_list.c:18)
 
 Invalid read of size 1
    at 0x........: main (big_blocks_freed_list.c:41)
  Address 0x........ is 10 bytes inside a block of size 10,000 free'd
    at 0x........: free (vg_replace_malloc.c:...)
    by 0x........: main (big_blocks_freed_list.c:28)
+ Block was alloc'd at
+   at 0x........: malloc (vg_replace_malloc.c:...)
+   by 0x........: main (big_blocks_freed_list.c:27)
 
 Invalid read of size 1
    at 0x........: main (big_blocks_freed_list.c:46)
  Address 0x........ is 10 bytes inside a block of size 1,000,015 free'd
    at 0x........: free (vg_replace_malloc.c:...)
    by 0x........: main (big_blocks_freed_list.c:40)
+ Block was alloc'd at
+   at 0x........: malloc (vg_replace_malloc.c:...)
+   by 0x........: main (big_blocks_freed_list.c:39)
 
 Invalid read of size 1
    at 0x........: main (big_blocks_freed_list.c:55)
  Address 0x........ is 10 bytes inside a block of size 10,000 free'd
    at 0x........: free (vg_replace_malloc.c:...)
    by 0x........: main (big_blocks_freed_list.c:28)
+ Block was alloc'd at
+   at 0x........: malloc (vg_replace_malloc.c:...)
+   by 0x........: main (big_blocks_freed_list.c:27)
 
 
 HEAP SUMMARY:
