@@ -5,6 +5,10 @@ Invalid write of size 1
    at 0x........: free (vg_replace_malloc.c:...)
    by 0x........: really (malloc1.c:19)
    by 0x........: main (malloc1.c:9)
+ Block was alloc'd at
+   at 0x........: malloc (vg_replace_malloc.c:...)
+   by 0x........: really (malloc1.c:16)
+   by 0x........: main (malloc1.c:9)
 
 Invalid write of size 1
    at 0x........: really (malloc1.c:23)
